# ds_and_algo

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
ds/: span.hpp
ds/span/: main.cpp  span.hpp
